--- a/firebase.json
+++ b/firebase.json
@@ -10,8 +10,8 @@
         "firebase-debug.*.log"
       ],
       "predeploy": [
-        "yarn workspace @projectname/functions lint",
-        "yarn workspace @projectname/functions build"
+        "yarn workspace @traveline/functions lint",
+        "yarn workspace @traveline/functions build"
       ]
     }
   ],
