--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@projectname/functions",
+  "name": "@traveline/functions",
   "version": "0.0.0",
   "private": true,
   "engines": {
